--- a/data/weather_preds.html
+++ b/data/weather_preds.html
@@ -1,95 +1,92 @@
 <style type="text/css">
-#T_dbb75 td {
+#T_5ed56 td {
   text-align: center;
 }
-#T_dbb75 th {
+#T_5ed56 th {
   text-align: center;
 }
-#T_dbb75_row0_col3 {
+#T_5ed56_row0_col3, #T_5ed56_row1_col3, #T_5ed56_row6_col4 {
   background-color: yellow;
 }
-#T_dbb75_row0_col4 {
-  background-color: red;
-}
-#T_dbb75_row1_col4 {
+#T_5ed56_row0_col4, #T_5ed56_row1_col4 {
   background-color: orange;
 }
 </style>
-<table id="T_dbb75">
+<table id="T_5ed56">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
-      <th id="T_dbb75_level0_col0" class="col_heading level0 col0" >DATE</th>
-      <th id="T_dbb75_level0_col1" class="col_heading level0 col1" >MAX TEMPERATURE</th>
-      <th id="T_dbb75_level0_col2" class="col_heading level0 col2" >AVG WIND</th>
-      <th id="T_dbb75_level0_col3" class="col_heading level0 col3" >TOTAL PRECIPITATION</th>
-      <th id="T_dbb75_level0_col4" class="col_heading level0 col4" >PRECIPITATION PROBABILITY</th>
+      <th id="T_5ed56_level0_col0" class="col_heading level0 col0" >DATE</th>
+      <th id="T_5ed56_level0_col1" class="col_heading level0 col1" >MAX TEMPERATURE</th>
+      <th id="T_5ed56_level0_col2" class="col_heading level0 col2" >AVG WIND</th>
+      <th id="T_5ed56_level0_col3" class="col_heading level0 col3" >TOTAL PRECIPITATION</th>
+      <th id="T_5ed56_level0_col4" class="col_heading level0 col4" >PRECIPITATION PROBABILITY</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th id="T_dbb75_level0_row0" class="row_heading level0 row0" >0</th>
-      <td id="T_dbb75_row0_col0" class="data row0 col0" >2023-08-17</td>
-      <td id="T_dbb75_row0_col1" class="data row0 col1" >83</td>
-      <td id="T_dbb75_row0_col2" class="data row0 col2" >14</td>
-      <td id="T_dbb75_row0_col3" class="data row0 col3" >0.12</td>
-      <td id="T_dbb75_row0_col4" class="data row0 col4" >0.86</td>
+      <th id="T_5ed56_level0_row0" class="row_heading level0 row0" >0</th>
+      <td id="T_5ed56_row0_col0" class="data row0 col0" >2023-08-25</td>
+      <td id="T_5ed56_row0_col1" class="data row0 col1" >95</td>
+      <td id="T_5ed56_row0_col2" class="data row0 col2" >11</td>
+      <td id="T_5ed56_row0_col3" class="data row0 col3" >0.04</td>
+      <td id="T_5ed56_row0_col4" class="data row0 col4" >0.53</td>
     </tr>
     <tr>
-      <th id="T_dbb75_level0_row1" class="row_heading level0 row1" >1</th>
-      <td id="T_dbb75_row1_col0" class="data row1 col0" >2023-08-18</td>
-      <td id="T_dbb75_row1_col1" class="data row1 col1" >78</td>
-      <td id="T_dbb75_row1_col2" class="data row1 col2" >7</td>
-      <td id="T_dbb75_row1_col3" class="data row1 col3" >0.00</td>
-      <td id="T_dbb75_row1_col4" class="data row1 col4" >0.75</td>
+      <th id="T_5ed56_level0_row1" class="row_heading level0 row1" >1</th>
+      <td id="T_5ed56_row1_col0" class="data row1 col0" >2023-08-26</td>
+      <td id="T_5ed56_row1_col1" class="data row1 col1" >92</td>
+      <td id="T_5ed56_row1_col2" class="data row1 col2" >10</td>
+      <td id="T_5ed56_row1_col3" class="data row1 col3" >0.05</td>
+      <td id="T_5ed56_row1_col4" class="data row1 col4" >0.58</td>
     </tr>
     <tr>
-      <th id="T_dbb75_level0_row2" class="row_heading level0 row2" >2</th>
-      <td id="T_dbb75_row2_col0" class="data row2 col0" >2023-08-19</td>
-      <td id="T_dbb75_row2_col1" class="data row2 col1" >87</td>
-      <td id="T_dbb75_row2_col2" class="data row2 col2" >4</td>
-      <td id="T_dbb75_row2_col3" class="data row2 col3" >0.00</td>
-      <td id="T_dbb75_row2_col4" class="data row2 col4" >0.00</td>
+      <th id="T_5ed56_level0_row2" class="row_heading level0 row2" >2</th>
+      <td id="T_5ed56_row2_col0" class="data row2 col0" >2023-08-27</td>
+      <td id="T_5ed56_row2_col1" class="data row2 col1" >87</td>
+      <td id="T_5ed56_row2_col2" class="data row2 col2" >9</td>
+      <td id="T_5ed56_row2_col3" class="data row2 col3" >0.00</td>
+      <td id="T_5ed56_row2_col4" class="data row2 col4" >0.00</td>
     </tr>
     <tr>
-      <th id="T_dbb75_level0_row3" class="row_heading level0 row3" >3</th>
-      <td id="T_dbb75_row3_col0" class="data row3 col0" >2023-08-20</td>
-      <td id="T_dbb75_row3_col1" class="data row3 col1" >96</td>
-      <td id="T_dbb75_row3_col2" class="data row3 col2" >5</td>
-      <td id="T_dbb75_row3_col3" class="data row3 col3" >0.00</td>
-      <td id="T_dbb75_row3_col4" class="data row3 col4" >0.00</td>
+      <th id="T_5ed56_level0_row3" class="row_heading level0 row3" >3</th>
+      <td id="T_5ed56_row3_col0" class="data row3 col0" >2023-08-28</td>
+      <td id="T_5ed56_row3_col1" class="data row3 col1" >84</td>
+      <td id="T_5ed56_row3_col2" class="data row3 col2" >9</td>
+      <td id="T_5ed56_row3_col3" class="data row3 col3" >0.00</td>
+      <td id="T_5ed56_row3_col4" class="data row3 col4" >0.00</td>
     </tr>
     <tr>
-      <th id="T_dbb75_level0_row4" class="row_heading level0 row4" >4</th>
-      <td id="T_dbb75_row4_col0" class="data row4 col0" >2023-08-21</td>
-      <td id="T_dbb75_row4_col1" class="data row4 col1" >96</td>
-      <td id="T_dbb75_row4_col2" class="data row4 col2" >6</td>
-      <td id="T_dbb75_row4_col3" class="data row4 col3" >0.00</td>
-      <td id="T_dbb75_row4_col4" class="data row4 col4" >0.00</td>
+      <th id="T_5ed56_level0_row4" class="row_heading level0 row4" >4</th>
+      <td id="T_5ed56_row4_col0" class="data row4 col0" >2023-08-29</td>
+      <td id="T_5ed56_row4_col1" class="data row4 col1" >87</td>
+      <td id="T_5ed56_row4_col2" class="data row4 col2" >7</td>
+      <td id="T_5ed56_row4_col3" class="data row4 col3" >0.00</td>
+      <td id="T_5ed56_row4_col4" class="data row4 col4" >0.00</td>
     </tr>
     <tr>
-      <th id="T_dbb75_level0_row5" class="row_heading level0 row5" >5</th>
-      <td id="T_dbb75_row5_col0" class="data row5 col0" >2023-08-22</td>
-      <td id="T_dbb75_row5_col1" class="data row5 col1" >95</td>
-      <td id="T_dbb75_row5_col2" class="data row5 col2" >8</td>
-      <td id="T_dbb75_row5_col3" class="data row5 col3" >0.00</td>
-      <td id="T_dbb75_row5_col4" class="data row5 col4" >0.00</td>
+      <th id="T_5ed56_level0_row5" class="row_heading level0 row5" >5</th>
+      <td id="T_5ed56_row5_col0" class="data row5 col0" >2023-08-30</td>
+      <td id="T_5ed56_row5_col1" class="data row5 col1" >84</td>
+      <td id="T_5ed56_row5_col2" class="data row5 col2" >10</td>
+      <td id="T_5ed56_row5_col3" class="data row5 col3" >0.00</td>
+      <td id="T_5ed56_row5_col4" class="data row5 col4" >0.00</td>
     </tr>
     <tr>
-      <th id="T_dbb75_level0_row6" class="row_heading level0 row6" >6</th>
-      <td id="T_dbb75_row6_col0" class="data row6 col0" >2023-08-23</td>
-      <td id="T_dbb75_row6_col1" class="data row6 col1" >97</td>
-      <td id="T_dbb75_row6_col2" class="data row6 col2" >7</td>
-      <td id="T_dbb75_row6_col3" class="data row6 col3" >0.00</td>
-      <td id="T_dbb75_row6_col4" class="data row6 col4" >0.00</td>
+      <th id="T_5ed56_level0_row6" class="row_heading level0 row6" >6</th>
+      <td id="T_5ed56_row6_col0" class="data row6 col0" >2023-08-31</td>
+      <td id="T_5ed56_row6_col1" class="data row6 col1" >86</td>
+      <td id="T_5ed56_row6_col2" class="data row6 col2" >8</td>
+      <td id="T_5ed56_row6_col3" class="data row6 col3" >0.00</td>
+      <td id="T_5ed56_row6_col4" class="data row6 col4" >0.05</td>
     </tr>
     <tr>
-      <th id="T_dbb75_level0_row7" class="row_heading level0 row7" >7</th>
-      <td id="T_dbb75_row7_col0" class="data row7 col0" >2023-08-24</td>
-      <td id="T_dbb75_row7_col1" class="data row7 col1" >103</td>
-      <td id="T_dbb75_row7_col2" class="data row7 col2" >10</td>
-      <td id="T_dbb75_row7_col3" class="data row7 col3" >0.00</td>
-      <td id="T_dbb75_row7_col4" class="data row7 col4" >0.00</td>
+      <th id="T_5ed56_level0_row7" class="row_heading level0 row7" >7</th>
+      <td id="T_5ed56_row7_col0" class="data row7 col0" >2023-09-01</td>
+      <td id="T_5ed56_row7_col1" class="data row7 col1" >94</td>
+      <td id="T_5ed56_row7_col2" class="data row7 col2" >5</td>
+      <td id="T_5ed56_row7_col3" class="data row7 col3" >0.00</td>
+      <td id="T_5ed56_row7_col4" class="data row7 col4" >0.00</td>
     </tr>
   </tbody>
 </table>
