--- a/data/weather_preds.html
+++ b/data/weather_preds.html
@@ -1,95 +1,104 @@
 <style type="text/css">
-#T_e1ce7 td {
+#T_2b972 td {
   text-align: center;
 }
-#T_e1ce7 th {
+#T_2b972 th {
   text-align: center;
 }
-#T_e1ce7_row2_col3, #T_e1ce7_row3_col3, #T_e1ce7_row4_col3 {
-  background-color: orange;
-}
-#T_e1ce7_row2_col4, #T_e1ce7_row3_col4, #T_e1ce7_row4_col4 {
-  background-color: red;
-}
-#T_e1ce7_row5_col3, #T_e1ce7_row5_col4 {
+#T_2b972_row0_col5, #T_2b972_row1_col4, #T_2b972_row2_col4, #T_2b972_row3_col4, #T_2b972_row4_col5 {
   background-color: yellow;
 }
+#T_2b972_row1_col5, #T_2b972_row3_col5 {
+  background-color: orange;
+}
+#T_2b972_row2_col5 {
+  background-color: red;
+}
 </style>
-<table id="T_e1ce7">
+<table id="T_2b972">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
-      <th id="T_e1ce7_level0_col0" class="col_heading level0 col0" >DATE</th>
-      <th id="T_e1ce7_level0_col1" class="col_heading level0 col1" >MAX TEMPERATURE</th>
-      <th id="T_e1ce7_level0_col2" class="col_heading level0 col2" >AVG WIND</th>
-      <th id="T_e1ce7_level0_col3" class="col_heading level0 col3" >TOTAL PRECIPITATION</th>
-      <th id="T_e1ce7_level0_col4" class="col_heading level0 col4" >PRECIPITATION PROBABILITY</th>
+      <th id="T_2b972_level0_col0" class="col_heading level0 col0" >Trail</th>
+      <th id="T_2b972_level0_col1" class="col_heading level0 col1" >DATE</th>
+      <th id="T_2b972_level0_col2" class="col_heading level0 col2" >MAX TEMPERATURE</th>
+      <th id="T_2b972_level0_col3" class="col_heading level0 col3" >AVG WIND</th>
+      <th id="T_2b972_level0_col4" class="col_heading level0 col4" >TOTAL PRECIPITATION</th>
+      <th id="T_2b972_level0_col5" class="col_heading level0 col5" >PRECIPITATION PROBABILITY</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th id="T_e1ce7_level0_row0" class="row_heading level0 row0" >0</th>
-      <td id="T_e1ce7_row0_col0" class="data row0 col0" >2023-09-24</td>
-      <td id="T_e1ce7_row0_col1" class="data row0 col1" >80</td>
-      <td id="T_e1ce7_row0_col2" class="data row0 col2" >8</td>
-      <td id="T_e1ce7_row0_col3" class="data row0 col3" >0.00</td>
-      <td id="T_e1ce7_row0_col4" class="data row0 col4" >0.00</td>
+      <th id="T_2b972_level0_row0" class="row_heading level0 row0" >0</th>
+      <td id="T_2b972_row0_col0" class="data row0 col0" >Landen Deerfield</td>
+      <td id="T_2b972_row0_col1" class="data row0 col1" >2023-09-25</td>
+      <td id="T_2b972_row0_col2" class="data row0 col2" >79</td>
+      <td id="T_2b972_row0_col3" class="data row0 col3" >6</td>
+      <td id="T_2b972_row0_col4" class="data row0 col4" >0.00</td>
+      <td id="T_2b972_row0_col5" class="data row0 col5" >0.01</td>
     </tr>
     <tr>
-      <th id="T_e1ce7_level0_row1" class="row_heading level0 row1" >1</th>
-      <td id="T_e1ce7_row1_col0" class="data row1 col0" >2023-09-25</td>
-      <td id="T_e1ce7_row1_col1" class="data row1 col1" >83</td>
-      <td id="T_e1ce7_row1_col2" class="data row1 col2" >7</td>
-      <td id="T_e1ce7_row1_col3" class="data row1 col3" >0.00</td>
-      <td id="T_e1ce7_row1_col4" class="data row1 col4" >0.00</td>
+      <th id="T_2b972_level0_row1" class="row_heading level0 row1" >1</th>
+      <td id="T_2b972_row1_col0" class="data row1 col0" >Landen Deerfield</td>
+      <td id="T_2b972_row1_col1" class="data row1 col1" >2023-09-26</td>
+      <td id="T_2b972_row1_col2" class="data row1 col2" >85</td>
+      <td id="T_2b972_row1_col3" class="data row1 col3" >12</td>
+      <td id="T_2b972_row1_col4" class="data row1 col4" >0.01</td>
+      <td id="T_2b972_row1_col5" class="data row1 col5" >0.64</td>
     </tr>
     <tr>
-      <th id="T_e1ce7_level0_row2" class="row_heading level0 row2" >2</th>
-      <td id="T_e1ce7_row2_col0" class="data row2 col0" >2023-09-26</td>
-      <td id="T_e1ce7_row2_col1" class="data row2 col1" >85</td>
-      <td id="T_e1ce7_row2_col2" class="data row2 col2" >14</td>
-      <td id="T_e1ce7_row2_col3" class="data row2 col3" >0.30</td>
-      <td id="T_e1ce7_row2_col4" class="data row2 col4" >1.00</td>
+      <th id="T_2b972_level0_row2" class="row_heading level0 row2" >2</th>
+      <td id="T_2b972_row2_col0" class="data row2 col0" >Landen Deerfield</td>
+      <td id="T_2b972_row2_col1" class="data row2 col1" >2023-09-27</td>
+      <td id="T_2b972_row2_col2" class="data row2 col2" >76</td>
+      <td id="T_2b972_row2_col3" class="data row2 col3" >11</td>
+      <td id="T_2b972_row2_col4" class="data row2 col4" >0.24</td>
+      <td id="T_2b972_row2_col5" class="data row2 col5" >1.00</td>
     </tr>
     <tr>
-      <th id="T_e1ce7_level0_row3" class="row_heading level0 row3" >3</th>
-      <td id="T_e1ce7_row3_col0" class="data row3 col0" >2023-09-27</td>
-      <td id="T_e1ce7_row3_col1" class="data row3 col1" >79</td>
-      <td id="T_e1ce7_row3_col2" class="data row3 col2" >11</td>
-      <td id="T_e1ce7_row3_col3" class="data row3 col3" >0.38</td>
-      <td id="T_e1ce7_row3_col4" class="data row3 col4" >1.00</td>
+      <th id="T_2b972_level0_row3" class="row_heading level0 row3" >3</th>
+      <td id="T_2b972_row3_col0" class="data row3 col0" >Landen Deerfield</td>
+      <td id="T_2b972_row3_col1" class="data row3 col1" >2023-09-28</td>
+      <td id="T_2b972_row3_col2" class="data row3 col2" >72</td>
+      <td id="T_2b972_row3_col3" class="data row3 col3" >7</td>
+      <td id="T_2b972_row3_col4" class="data row3 col4" >0.11</td>
+      <td id="T_2b972_row3_col5" class="data row3 col5" >0.69</td>
     </tr>
     <tr>
-      <th id="T_e1ce7_level0_row4" class="row_heading level0 row4" >4</th>
-      <td id="T_e1ce7_row4_col0" class="data row4 col0" >2023-09-28</td>
-      <td id="T_e1ce7_row4_col1" class="data row4 col1" >74</td>
-      <td id="T_e1ce7_row4_col2" class="data row4 col2" >8</td>
-      <td id="T_e1ce7_row4_col3" class="data row4 col3" >0.35</td>
-      <td id="T_e1ce7_row4_col4" class="data row4 col4" >1.00</td>
+      <th id="T_2b972_level0_row4" class="row_heading level0 row4" >4</th>
+      <td id="T_2b972_row4_col0" class="data row4 col0" >Landen Deerfield</td>
+      <td id="T_2b972_row4_col1" class="data row4 col1" >2023-09-29</td>
+      <td id="T_2b972_row4_col2" class="data row4 col2" >83</td>
+      <td id="T_2b972_row4_col3" class="data row4 col3" >6</td>
+      <td id="T_2b972_row4_col4" class="data row4 col4" >0.00</td>
+      <td id="T_2b972_row4_col5" class="data row4 col5" >0.03</td>
     </tr>
     <tr>
-      <th id="T_e1ce7_level0_row5" class="row_heading level0 row5" >5</th>
-      <td id="T_e1ce7_row5_col0" class="data row5 col0" >2023-09-29</td>
-      <td id="T_e1ce7_row5_col1" class="data row5 col1" >75</td>
-      <td id="T_e1ce7_row5_col2" class="data row5 col2" >5</td>
-      <td id="T_e1ce7_row5_col3" class="data row5 col3" >0.00</td>
-      <td id="T_e1ce7_row5_col4" class="data row5 col4" >0.20</td>
+      <th id="T_2b972_level0_row5" class="row_heading level0 row5" >5</th>
+      <td id="T_2b972_row5_col0" class="data row5 col0" >Landen Deerfield</td>
+      <td id="T_2b972_row5_col1" class="data row5 col1" >2023-09-30</td>
+      <td id="T_2b972_row5_col2" class="data row5 col2" >84</td>
+      <td id="T_2b972_row5_col3" class="data row5 col3" >7</td>
+      <td id="T_2b972_row5_col4" class="data row5 col4" >0.00</td>
+      <td id="T_2b972_row5_col5" class="data row5 col5" >0.00</td>
     </tr>
     <tr>
-      <th id="T_e1ce7_level0_row6" class="row_heading level0 row6" >6</th>
-      <td id="T_e1ce7_row6_col0" class="data row6 col0" >2023-09-30</td>
-      <td id="T_e1ce7_row6_col1" class="data row6 col1" >77</td>
-      <td id="T_e1ce7_row6_col2" class="data row6 col2" >8</td>
-      <td id="T_e1ce7_row6_col3" class="data row6 col3" >0.00</td>
-      <td id="T_e1ce7_row6_col4" class="data row6 col4" >0.00</td>
+      <th id="T_2b972_level0_row6" class="row_heading level0 row6" >6</th>
+      <td id="T_2b972_row6_col0" class="data row6 col0" >Landen Deerfield</td>
+      <td id="T_2b972_row6_col1" class="data row6 col1" >2023-10-01</td>
+      <td id="T_2b972_row6_col2" class="data row6 col2" >84</td>
+      <td id="T_2b972_row6_col3" class="data row6 col3" >6</td>
+      <td id="T_2b972_row6_col4" class="data row6 col4" >0.00</td>
+      <td id="T_2b972_row6_col5" class="data row6 col5" >0.00</td>
     </tr>
     <tr>
-      <th id="T_e1ce7_level0_row7" class="row_heading level0 row7" >7</th>
-      <td id="T_e1ce7_row7_col0" class="data row7 col0" >2023-10-01</td>
-      <td id="T_e1ce7_row7_col1" class="data row7 col1" >75</td>
-      <td id="T_e1ce7_row7_col2" class="data row7 col2" >10</td>
-      <td id="T_e1ce7_row7_col3" class="data row7 col3" >0.00</td>
-      <td id="T_e1ce7_row7_col4" class="data row7 col4" >0.00</td>
+      <th id="T_2b972_level0_row7" class="row_heading level0 row7" >7</th>
+      <td id="T_2b972_row7_col0" class="data row7 col0" >Landen Deerfield</td>
+      <td id="T_2b972_row7_col1" class="data row7 col1" >2023-10-02</td>
+      <td id="T_2b972_row7_col2" class="data row7 col2" >86</td>
+      <td id="T_2b972_row7_col3" class="data row7 col3" >4</td>
+      <td id="T_2b972_row7_col4" class="data row7 col4" >0.00</td>
+      <td id="T_2b972_row7_col5" class="data row7 col5" >0.00</td>
     </tr>
   </tbody>
 </table>
